--- a/client/views/edit.modal.view.html
+++ b/client/views/edit.modal.view.html
@@ -11,24 +11,44 @@
              -->
     <form>
         <div id="accordion">
-                <div class="panel-group">
-                        <div class="panel panel-default" id="panel1">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#collapse1">Edit Your Courses and Office Hours</a>
-                                </h4>
-                            </div>
-                            <div id="collapse1" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <div class="form-group">
-                                        <div ng-repeat="course in $ctrl.courses track by $index">
-                                            <label>{{course.code}} {{course.name}}</label>
-                                        </div>
+            <div class="panel-group">
+                <div class="panel panel-default" id="panel1">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#collapse1">Edit Your Courses and Office Hours</a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div class="form-group">
+                                <div ng-repeat="course in $ctrl.courses track by $index">
+                                    <label> <a data-toggle="collapse" data-target="#{{$index}}">{{course.code}} {{course.name}}</a></label>
+                                    <div id="{{$index}}" class="collapse">
+                                        <table class="table table-bordered">
+                                            <tr>
+                                                <th>Periods:</th>
+                                                <th>Monday</th>
+                                                <th>Tuesday</th>
+                                                <th>Wednesday</th>
+                                                <th>Thursday</th>
+                                                <th>Friday</th>
+                                            </tr>
+                                            <tr ng-repeat="period in $ctrl.periods">
+                                                <td>
+                                                    {{period}}
+                                                </td>
+                                                <td ng-repeat="" ng-click="togglePeriod()">
+                                                    
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
             <div class="panel-group">
                 <div class="panel panel-default" id="panel2">
                     <div class="panel-heading">
@@ -73,86 +93,3 @@
 <div class="modal-footer">
     <button type="button" class="btn btn-default" ng-click="$ctrl.cancel()" data-dismiss="modal">Close</button>
 </div>
-
-
-<!-- <div class="panel-group">
-                <div class="panel panel-default" id="panel1">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse1">Add Your Office Hours...</a>
-                        </h4>
-                    </div>
-                    <div id="collapse1" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <table class="table table-bordered">
-                                    <tr>
-                                        <th>Periods:</th>
-                                        <th>Monday</th>
-                                        <th>Tuesday</th>
-                                        <th>Wednesday</th>
-                                        <th>Thursday</th>
-                                        <th>Friday</th>
-                                    </tr>
-                                    <tr>
-                                        <td> (1) 7:25 AM - 8:15 AM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (2) 8:30 AM - 9:20 AM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (3) 9:35 AM - 10:25 AM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (4) 10:40 AM - 11:30 AM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (5) 11:45 AM - 12:35 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (6) 12:50 PM - 1:40 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (7) 1:55 PM - 2:45 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (8) 3:00 PM - 3:50 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (9) 4:05 PM - 4:55 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (10) 5:10 PM - 6:00 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (11) 6:15 PM - 7:05 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (E1) 7:20 PM - 8:10 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (E2) 8:20 PM - 9:10 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                    <tr>
-                                        <td> (E3) 9:20 PM - 10:10 PM</td>
-                                        <td ng-repeat="x in [].constructor(number) track by $index" id="cell" onclick="chBackcolor(event);"></td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
