--- a/client/views/edit.modal.view.html
+++ b/client/views/edit.modal.view.html
@@ -1,89 +1,49 @@
-<div class="modal-dialog" id="controlDialog">
-    <div class="modal-content" id="controlContent">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" ng-click="$ctrl.cancel()">&times;</button>
-            <h4 class="modal-title"> Edit What Students Can See</h4>
-        </div>
-        <div class="modal-body" id="edit-modal-body">
-            <!-- 
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" ng-click="$ctrl.cancel()">&times;</button>
+    <h4 class="modal-title"> Edit What Students Can See</h4>
+</div>
+<div class="modal-body" id="edit-modal-body">
+    <!-- 
               Things that need to go here:
                 - Twitter
                 - Office Hours/Location
                 - Research Opportunities
              -->
-            <form>
-                <div id="accordion">
-                    <div class="panel-group">
-                        <div class="panel panel-default" id="panel1">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#collapse1">Edit Your Courses and Office Hours</a>
-                                </h4>
-                            </div>
-                            <div id="collapse1" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <div class="form-group">
-                                        <div ng-repeat="course in $ctrl.courses track by $index">
-                                            <label> <a data-toggle="collapse" data-target="#{{$index}}">{{course.code}}
-                                                    {{course.name}}</a></label>
-                                            <div id="{{$index}}" class="collapse">
-                                                <table class="table table-bordered">
-                                                    <tr>
-                                                        <th>Periods:</th>
-                                                        <th>Monday</th>
-                                                        <th>Tuesday</th>
-                                                        <th>Wednesday</th>
-                                                        <th>Thursday</th>
-                                                        <th>Friday</th>
-                                                    </tr>
-                                                    <tr ng-repeat="period in $ctrl.periods">
-                                                        <td>
-                                                            {{period.time}}
-                                                        </td>
-                                                        <td id="cell" ng-repeat="day in period.days track by $index"
-                                                            ng-click="$ctrl.togglePeriod($parent.$index, $index)"
-                                                            ng-class="{active: ($ctrl.checkCellState($parent.$index, $index) == true)}">
-
-                                                        </td>
-                                                    </tr>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <form>
+        <div id="accordion">
             <div class="panel-group">
-                <div class="panel panel-default" id="panel2">
+                <div class="panel panel-default" id="panel1">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse2" ng-click="$ctrl.getCurrentResearch()">Add a Research Position...</a>
+                            <a data-toggle="collapse" href="#collapse1">Edit Your Courses and Office Hours</a>
                         </h4>
                     </div>
-                    <div id="collapse2" class="panel-collapse collapse">
+                    <div id="collapse1" class="panel-collapse collapse">
                         <div class="panel-body">
                             <div class="form-group">
-                                <!-- <h4>
-                                    Research Position(s)
-                                </h4> -->
-                                <div id="research-pos-field">
-                                    <div class="row">
-                                        <h4> Research Position(s)</h4>
-                                        <br>
-                                        <label for="researchArea">Details of Research</label>
-                                        <div ng-bind="$ctrl.currentdetail"></div>
-                                        <input type="text" ng-model="$ctrl.detail" class="form-control">
-                                        <br>
-                                        <label for="researchHours">Required Hours Per Week</label>
-                                        <div ng-bind="$ctrl.currenthour"></div>
-                                        <input type="number" ng-model="$ctrl.hour" class="form-control">
-                                        <button class="btn btn-info form-control" role="button" ng-click="$ctrl.updateResearch()">Update</button>
-                                        <br>
-                                        <div ng-if="$ctrl.rscUpdateFail" class="alert alert-warning">Unable to update at this time!</div>
-                                        <div ng-if="$ctrl.rscUpdateSuc" class="alert alert-warning">Success!</div>
+                                <div ng-repeat="course in $ctrl.courses track by $index">
+                                    <label> <a data-toggle="collapse" data-target="#{{$index}}">{{course.code}}
+                                            {{course.name}}</a></label>
+                                    <div id="{{$index}}" class="collapse">
+                                        <table class="table table-bordered">
+                                            <tr>
+                                                <th>Periods:</th>
+                                                <th>Monday</th>
+                                                <th>Tuesday</th>
+                                                <th>Wednesday</th>
+                                                <th>Thursday</th>
+                                                <th>Friday</th>
+                                            </tr>
+                                            <tr ng-repeat="period in $ctrl.periods">
+                                                <td>
+                                                    {{period.time}}
+                                                </td>
+                                                <td id="cell" ng-repeat="day in period.days track by $index" ng-click="$ctrl.togglePeriod($parent.$index, $index)"
+                                                    ng-class="{active: ($ctrl.checkCellState($parent.$index, $index) == true)}">
+
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </div>
                                 </div>
                             </div>
@@ -91,30 +51,66 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-group">
-                <div class="panel panel-default" id="panel3">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse3" ng-click="$ctrl.getSocial()">Add Your Social Media Link</a>
-                        </h4>
-                    </div>
-                    <div id="collapse3" class="panel-collapse collapse">
-                        <div class="panel-body">
-                                <div>Twitter: {{$ctrl.currenttwitter}} </div>
-                                <input type="text" ng-model="$ctrl.twitter" class="form-control" placeholder="Twitter">
-                                <div>Linkedin: {{$ctrl.currentlinkedin}} </div>
-                                <input type="text" ng-model="$ctrl.linkedin" class="form-control" placeholder="Linkedin">
-                                <button class="btn btn-info form-control" role="button" ng-click="$ctrl.updateSocial()">Update</button>
-                                <br>
-                                <div ng-if="$ctrl.smUpdateFail" class="alert alert-warning">Unable to update at this time!</div>
-                                <div ng-if="$ctrl.smUpdateSuc" class="alert alert-warning">Success!</div>
+        </div>
+</div>
+<div class="panel-group">
+    <div class="panel panel-default" id="panel2">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" href="#collapse2" ng-click="$ctrl.getCurrentResearch()">Add a Research
+                    Position...</a>
+            </h4>
+        </div>
+        <div id="collapse2" class="panel-collapse collapse">
+            <div class="panel-body">
+                <div class="form-group">
+                    <!-- <h4>
+                                    Research Position(s)
+                                </h4> -->
+                    <div id="research-pos-field">
+                        <div class="row">
+                            <h4> Research Position(s)</h4>
+                            <br>
+                            <label for="researchArea">Details of Research</label>
+                            <div ng-bind="$ctrl.currentdetail"></div>
+                            <input type="text" ng-model="$ctrl.detail" class="form-control">
+                            <br>
+                            <label for="researchHours">Required Hours Per Week</label>
+                            <div ng-bind="$ctrl.currenthour"></div>
+                            <input type="number" ng-model="$ctrl.hour" class="form-control">
+                            <button class="btn btn-info form-control" role="button" ng-click="$ctrl.updateResearch()">Update</button>
+                            <br>
+                            <div ng-if="$ctrl.rscUpdateFail" class="alert alert-warning">Unable to update at this time!</div>
+                            <div ng-if="$ctrl.rscUpdateSuc" class="alert alert-warning">Success!</div>
                         </div>
                     </div>
                 </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default" ng-click="$ctrl.cancel()" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
+</div>
+<div class="panel-group">
+    <div class="panel panel-default" id="panel3">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" href="#collapse3" ng-click="$ctrl.getSocial()">Add Your Social Media Link</a>
+            </h4>
+        </div>
+        <div id="collapse3" class="panel-collapse collapse">
+            <div class="panel-body">
+                <div>Twitter: {{$ctrl.currenttwitter}} </div>
+                <input type="text" ng-model="$ctrl.twitter" class="form-control" placeholder="Twitter">
+                <div>Linkedin: {{$ctrl.currentlinkedin}} </div>
+                <input type="text" ng-model="$ctrl.linkedin" class="form-control" placeholder="Linkedin">
+                <button class="btn btn-info form-control" role="button" ng-click="$ctrl.updateSocial()">Update</button>
+                <br>
+                <div ng-if="$ctrl.smUpdateFail" class="alert alert-warning">Unable to update at this time!</div>
+                <div ng-if="$ctrl.smUpdateSuc" class="alert alert-warning">Success!</div>
+            </div>
+        </div>
+    </div>
+    </form>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" ng-click="$ctrl.cancel()" data-dismiss="modal">Close</button>
 </div>
