--- a/client/views/professor.modal.view.html
+++ b/client/views/professor.modal.view.html
@@ -3,7 +3,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close" ng-click="$dismiss('home')">&times;</button>
                 <h4 class="modal-title"> *Professor/Course/TA*'s Office Hours</h4>
             </div>
             <div class="modal-body" ng-app="directoryApp">
@@ -27,7 +27,7 @@
                 <div id="twitter-widget-holder">
                     <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw"
                         data-tweet-limit="1">Tweets
-                        by TwitterDev</a>
+                        by {{vm.twitter}}</a>
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <div id="RateMyProfessor">
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" ng-click="$dismiss('home')">Close</button>
             </div>
         </div>
     </div>
